<?xml version="1.0"?>
<package format="3">
  <name>ros2_parameters</name>
  <version>0.0.0</version>
  <description>ROS2 C++ Parameters Assignment</description>

  <maintainer email="your_email@example.com">Bhavesh</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime + build dependency -->
  <depend>rclcpp</depend>

  <!-- Testing dependencies (recommended) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
